<resources>
    <string name="app_name">RecipesCreator</string>
    <string name="email">email</string>
    <string name="password">пароль</string>
    <string name="autentification">Авторизация</string>
    <string name="add_dish">Добавить блюдо</string>
    <string name="exit">Выйти</string>
    <string name="name_dish">Название</string>
    <string name="сategory">Категория</string>
    <string name="next">Далее</string>
    <string name="ingredients_db">Выберите Ингредиенты</string>
    <string name="ingredients_chose">Выбранные ингредиенты</string>
    <string name="count">Количество</string>
    <string name="recipe">Рецепт</string>
    <string name="add">Добавить</string>
    <string name="inspection">На проверку</string>
    <string name="category">Категория</string>
    <string name="name">Название</string>
    <string name="dimension">Размерность</string>
    <string name="ingredient">Ингредиент</string>
    <string name="update_dish">Изменить блюдо</string>
    <string name="delete_dish">Удалить блюдо</string>
    <string name="poosition">Позиция</string>
</resources>
