<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.al_pc.recipescreator.Activities.CabinetCreatorActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:background="@drawable/recipes"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/add_dish"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/add_dish"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/update_dish"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/update_dish"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/delete_dish"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/delete_dish"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:text="@string/exit"/>

</LinearLayout>
