<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:orientation="vertical"
    tools:context="com.example.al_pc.recipescreator.Activities.CreateDishesRecipeActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="8dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/recipeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipeRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/inspection"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/inspection"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>